# MLflow-Multi-Model-Serving-on-Kubernetes

./: .gitignore  Makefile  pyproject.toml  readme.md
infer/: infer-california.py  infer-wine.py
k8s/: model-serving.yml
model/: Dockerfile.mlserver  build-local-images.sh
train/: train-california-xgboost.py  train-wine-hpt.py
