[project]
name = "ml-with-mlflow-k8s"
version = "0.1.0"
description = "Train a wine model with MLflow and serve it on local Kubernetes"
readme = "readme.md"
requires-python = ">=3.9,<3.13"
dependencies = [
  "mlflow>=3.1.4",
  "numpy>=2.0.2",
  "requests>=2.32.5",
  "scikit-learn>=1.6.1",
  "scipy>=1.13.1",
  "xgboost>=2.1.0",
]

[tool.uv]
package = false
